# mandelbrot

./: Cargo.toml
src/: icon.rs  lib.rs  main.rs  shader.wgsl  shader32.wgsl  shader64.wgsl
src/interactive/: camera_controller.rs
