[package]
name = "mandelbrot_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.30.7"
gl = "0.14.0"
winit = "0.28.3"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3"

