[package]
name = "mandelbrot_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
winit = "0.28.3"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3"
bytemuck = { version = "1.13.1", features = [ "derive" ] }

