[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }

